# trapped_in_the_realm_of_generosity_dataport

./: .env  Cargo.toml  LICENSE.md  README.md  docker-compose.yml
http/v1/: character.http  server.http
migrations/: 20231111191814_initial.sql
src/: main.rs  models.rs
src/v1_handlers/: characters.rs  game_servers.rs  mod.rs  servers.rs
