[package]
name = "trapped_in_the_realm_of_generosity_dataport"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
dotenv = "0.15.0"
env_logger = "0.10.1"
log = "0.4.20"
rust_decimal = { version = "1.33.0", features = ["serde"] }
rust_decimal_macros = "1.33.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio", "uuid", "time", "rust_decimal"] }
time = { version = "0.3.30", features = ["serde"] }
uuid = { version = "1.5.0", features = ["serde"] }